# tribevibe

./: .env  .gitignore  DUMMY_DATA_README.md  GROUP_API_DOCUMENTATION.md  README.md  alembic.ini  auth.py  backup.dump  database.py  insert_dummy_data.py  main.py  models.py  pyproject.toml  requirements.txt  run_dummy_data.py  schemas.py
alembic/versions/: 84fa24844985_init.py  add_event_date_time.py  add_group_members_table.py  add_groups_table.py  c1e20e7b4b81_add_banner_url_to_events.py  f06462ccbc55_add_category_to_events.py
alembic_bkp/: env.py
alembic_bkp/versions/: README.txt
routers/: events.py  groups.py  users.py
tests/: db_test.py  test_events_db.py
